src/main/kubernetes/artemis/ingresses/activemq-artemis-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/creatorId: user-9jfkn
  labels:
    cattle.io/creator: norman
  name: activemq
spec:
  rules:
  - host: activemq.artemis.rancher.localhost
    http:
      paths:
      - backend:
          serviceName: activemq-artemis
          servicePort: 8161
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - activemq.artemis.rancher.localhost
